# scrape-books

./: Cargo.toml
migrations/2023-05-21-140211_create_books/: up.sql
src/: main.rs  models.rs  schema.rs
