[package]
name = "scrape-books"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scraper = "0.16.0"
tokio = { version = "1.28.1", features = ["full"] }
reqwest = { version = "0.11.18", features = ["json"] }
diesel = { version = "2.0.0", features = ["postgres", "uuid", "chrono"] }
dotenvy = "0.15"
uuid = { version = "1.3.3", features = ["serde", "v4"] }
chrono = { version = "0.4.19", features = ["serde"] }
